--- a/common/components/ProgressToc.module.css
+++ b/common/components/ProgressToc.module.css
@@ -1,40 +1,19 @@
 .toc {
-    padding: 1em;
-    width: 14em;
-    line-height: 2;
-}
-
-.toc ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.toc ul ul {
-    padding-left: 1em;
+    @apply leading-8 pl-3;
 }
 
 .toc li a {
-    display: inline-block;
-    color: #aaa;
-    text-decoration: none;
-    transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+    @apply transition transform text-gray-500 hover:underline hover:text-gray-900;
 }
 
 .toc li.visible > a {
-    color: #111;
-    transform: translate(5px);
+    @apply translate-x-[5px] text-gray-800;
 }
 
 .marker {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
+    @apply absolute top-0 left-0 w-full h-full z-[-1];
 }
 
 .marker path {
-    transition: all 0.3s ease;
+    @apply transition-all duration-1000 ease-out;
 }
