--- a/styles/global.css
+++ b/styles/global.css
@@ -4,3 +4,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+    hr {
+        @apply w-full;
+    }
+}
+
+@layer components {
+    .link {
+        @apply cursor-pointer w-max;
+    }
+
+    .link:hover {
+        @apply underline;
+    }
+}
