add article stackoverflow typescript range

--- a/styles/md.css
+++ b/styles/md.css
@@ -15,5 +15,9 @@
 }
 
 .markdown-body h1:first-child {
-    display: none;
+    @apply hidden;
+}
+
+.markdown-body > .image-wrapper {
+    @apply my-6;
 }
